syntax = "proto3";
package pkg;

message A {
  string a = 1;
  message NestedA {
    message NestedNestedA {
      string nested_nested_x = 1;
    }
    string nested_x = 1;
  }
  NestedA nested_a = 1;
}

enum FooEnum {
	FOO_ENUM_X = 0;
	FOO_ENUM_Y = 1;
}

message B {
	enum NestedBEnum {
		NESTED_B_ENUM_X = 0;
		NESTED_B_ENUM_Y = 1;
	}
	FooEnum foo_enum = 1;
	Foo.NestedA nested_a = 2;
}

message Baz {
	Bar.NestedBarEnum nested_bar_enum = 1;
}
